# agent_security_framework

./: .gitignore  BENCHMARK.md  CLAUDE.md  CLAUDE_for_verifier_llm.md  Dockerfile  README.md  __init__.py  artifact_classifier.py  claude_cli_verifier.py  config.py  event_logger.py  evidence_builder.py  glm_verifier.py  mock_verifier.py  pyproject.toml  reputation_analyzer.py  requirements.txt  sandbox_runner.py  shadow_sandbox_safeguard.py  static_analyzer.py  trace_parser.py  trigger.py  verifier.py
bench/: .gitignore  README.md  action_templates.py  evidence_quality_bench.py  evidence_quality_bench_ia.py  framework_reliability.py  framework_reliability_RESULTS.md  framework_smoke.py  reputation_reliability.py  run_agentsentinel_bench.py  run_chanever_on_chase_dataset.py  run_chase_bench.py  run_chase_vs_chanever_small.py  run_clawvet_bench.py  run_injecagent.py  run_live_gates.py  run_smoke.py  run_static_rep_until_done.sh  setup_corpora.sh  static_analysis_reliability.py
bench/corpora/chase_compatible_ben/portmate/artifact/portmate-0.1.0/: LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  setup.py
bench/corpora/chase_compatible_ben/portmate/artifact/portmate-0.1.0/portmate/: __init__.py  cli.py  core.py
bench/corpora/chase_compatible_ben/portmate/artifact/portmate-0.1.0/portmate.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bench/corpora/chase_compatible_ben/prune-sdk/artifact/prune_sdk-0.1.0/: LICENSE  README.md  pyproject.toml
bench/corpora/chase_compatible_ben/prune-sdk/artifact/prune_sdk-0.1.0/prune/: __init__.py  _proxy.py  anthropic.py  config.py  exceptions.py  openai.py
bench/corpora/chase_compatible_ben/prune-sdk/artifact/prune_sdk-0.1.0/prune_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bench/corpora/chase_compatible_ben/prune-sdk/artifact/prune_sdk-0.1.0/tests/: test_anthropic.py  test_openai.py
bench/corpora/chase_compatible_ben/vibetodev/artifact/vibetodev-1.0.1/: README.md  pyproject.toml  setup.py
bench/corpora/chase_compatible_ben/vibetodev/artifact/vibetodev-1.0.1/vibetodev/: __init__.py  __main__.py  categorizer.py  cli.py  generator.py  scanner.py  validator.py
bench/corpora/chase_compatible_ben/vibetodev/artifact/vibetodev-1.0.1/vibetodev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bench/manifests/: benign-npm.txt  benign-pypi.txt  benign-repos.tsv  datadog-npm.tsv  datadog-pypi.tsv
bench/reproduction/: README.md  aggregate_malpacdetector.py  build_chase_compatible_corpus.py  render_charts.py  reproduce_all.sh  run_malpacdetector.sh  setup.sh
bench/scenarios/: benign-npm-extended.md  benign-npm.md  benign-pypi-extended.md  benign-pypi.md  benign-repo-extended.md  benign-repos.md  benign-skill-extended.md  benign-skills.md  benign-tools.md  datadog-npm.md  datadog-pypi.md  malicious-repos.md  skill-inject.md  toolhijacker.md
bench/translators/: injecagent.py
examples/benign_project/: README.md  requirements.txt
examples/malicious_package/: README.md  setup.py
examples/suspicious_project/: README.md
external_rules_chanever/: sensitive-file-read.yml
external_rules_guarddog_unscoped/: clipboard-access.yml  code-execution.yml  exfiltrate-sensitive-data.yml  go-exec-download.yml  go-exfiltrate-sensitive-data.yml  npm-api-obfuscation.yml  npm-install-script.yml  rubygems-code-execution.yml  shady-links.yml  silent-process-execution.yml  steganography.yml
prompts/: glm_system_prompt.txt
reputation/: __init__.py  _known_bad.py  _ossf_malicious.py  _osv.py  _typosquat.py  npm_reputation.py  pypi_reputation.py  repo_reputation.py  skill_reputation.py
research/: benchmark_design.md  literature_scan.md  paper.md  spec.md
security_framework/: __init__.py  config.py
security_framework/analysis/: __init__.py  reputation_analyzer.py  static_analyzer.py
security_framework/classification/: __init__.py  asset_kind_classifier.py  external_target_extractor.py  trigger.py
security_framework/evidence/: __init__.py  evidence_builder.py  policy.py
security_framework/safeguard/: __init__.py  shadow_sandbox_safeguard.py
security_framework/sandbox/: __init__.py  sandbox_runner.py  trace_parser.py
static_analyzers/: __init__.py  _npm_manifest.py  _obfuscation.py  container_image_analyzer.py  npm_analyzer.py  pypi_analyzer.py  repo_analyzer.py  skill_analyzer.py
tests/: test_asset_kind_classifier.py  test_claude_cli_verifier.py  test_claude_verifier.py  test_config.py  test_event_logger.py  test_evidence_builder.py  test_evidence_builder_bpftrace.py  test_external_target_corpus.py  test_external_target_extractor.py  test_mock_verifier.py  test_probe_bt.py  test_sandbox_runner_bpftrace.py  test_shadow_sandbox_safeguard.py  test_skill_injection_regression.py  test_static_analyzer.py  test_trace_parser_bpftrace.py  test_trigger.py  test_trigger_classify_corpus.py
(+477 files in other folders)
