[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security_framework"
version = "0.1.0"
description = "Shadow sandbox security framework for the vulnerable CLI agent"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
# Repo root directory is the package; the directory is named
# `agent_security_framework` (GitHub slug) but the import name is
# `security_framework` — package-dir maps one to the other.
packages = ["security_framework"]

[tool.setuptools.package-dir]
security_framework = "."

[tool.setuptools.package-data]
security_framework = ["probes/*.bt", "prompts/*", "*.md"]
