[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "portmate"
version = "0.1.0"
description = "A powerful CLI tool to check ports, find processes, and manage port usage"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Nikhilesh", email = "siddunikhilesh517@gmail.com"}
]
keywords = ["port", "network", "process", "cli", "developer-tools", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil>=5.9.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/siddu2402/portmate"
"Bug Tracker" = "https://github.com/siddu2402/portmate/issues"
Documentation = "https://github.com/siddu2402/portmate#readme"

[project.scripts]
portmate = "portmate.cli:main"
pm = "portmate.cli:main"
