[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prune-sdk"
version = "0.1.0"
description = "Reduce LLM API costs by 40-70% with one line of code — drop-in Anthropic/OpenAI client via the Prune proxy"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Prune", email = "hello@prune.so" }]
keywords = ["llm", "anthropic", "openai", "caching", "cost-optimization", "claude", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.28.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://prune.so"
Documentation = "https://docs.prune.so"
Repository = "https://github.com/prune/prune-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["prune*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that call real APIs",
]
