[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vibetodev"
version = "1.0.1"
description = "Transforme n'importe quel projet vibecode en parcours d'apprentissage"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ConnectPro"}
]
keywords = ["learning", "education", "code-analysis", "obsidian", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/connectpro/vibetodev"
Source = "https://github.com/connectpro/vibetodev"

[project.scripts]
vibetodev = "vibetodev.cli:main"
